--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,3 +23,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    # je configure le service pour l'utilisation de la page de pagination
+    App\Service\Pagination:
+        arguments:
+            $templatePath: 'partials/pagination.html.twig'
